--- a/document/支付.md
+++ b/document/支付.md
@@ -26,8 +26,14 @@ Sarah Bright用户，有余额500。
 
 ## 购买数量篡改
 
- 
+ 将商品数量修改为负数，即可负负得正，从而达到**加钱**效果。
+
+![QQ22918914922917714320220615120939](img/QQ22918914922917714320220615120939.gif)
 
 
 
 ## 付款金额篡改
+
+`price`参数没有做校验， 可以传入负数，即可负负得正，从而达到**加钱**效果。
+
+![付款金额篡改](img/ezgif-4-6aa5629559.gif)
