--- a/document/注册.md
+++ b/document/注册.md
@@ -24,8 +24,24 @@ http://127.0.0.1:8000/register/?attack_type=arbitrarily&username=1234&phone=1999
 
 演示GIF：
 
-
+![[video-to-gif output image]](img/ezgif-3-a02d666c4a.gif)
 
 
 
 ## 用户覆盖
+
+用户注册功能没有严格校验已存在的用户账号，导致攻击者可以通过 重复注册其他用户账号的方式重置他人密码。
+
+![image-20220615150305992](img/image-20220615150305992.png)
+
+
+
+![image-20220615150315998](img/image-20220615150315998.png)
+
+
+
+![image-20220615150328086](img/image-20220615150328086.png)
+
+演示GIF：
+
+![[video-to-gif output image]](img/ezgif-3-ab2d06eda9.gif)
