--- a/document/越权.md
+++ b/document/越权.md
@@ -22,6 +22,10 @@ http://127.0.0.1:8000/unauthorized_access/?username=Jeffrey%20Jones
 
 ![image-20220615110752906](img/image-20220615110752906.png)
 
+演示GIF：
+
+![[video-to-gif output image]](img/ezgif-4-b94ab37b91.gif)
+
 ### 修改用户信息(GET)
 
 正常修改用户接口操作：
@@ -44,6 +48,12 @@ http://127.0.0.1:8000/unauthorized_access/?username=Aaron%20Andrade&operation=ed
 
 ![image-20220615111541321](img/image-20220615111541321.png)
 
+演示GIF：
+
+![[video-to-gif output image]](img/ezgif-4-45f9e10b39.gif)
+
+
+
 ### 删除用户(GET)
 
 漏洞URL：
@@ -55,6 +65,10 @@ http://127.0.0.1:8000/unauthorized_access/?username=Candice%20Whitaker&operation
 ![image-20220615111831232](img/image-20220615111831232.png)
 
 ![image-20220615111850007](img/image-20220615111850007.png)
+
+演示GIF：
+
+![[video-to-gif output image]](img/ezgif-4-1f0d03d57b.gif)
 
 
 
@@ -71,6 +85,10 @@ http://127.0.0.1:8000/unauthorized_access/
 ```
 
 ![image-20220615112627963](img/image-20220615112627963.png)
+
+演示GIF：
+
+![[video-to-gif output image]](img/ezgif-4-1631325bdb.gif)
 
 ### 查看管理员信息（GET）
 
@@ -91,6 +109,10 @@ http://127.0.0.1:8000/unauthorized_access/?username=Cassandra%20Wright&role=%E7%
 ```
 
 ![image-20220615113025352](img/image-20220615113025352.png)
+
+演示GIF：
+
+![[video-to-gif output image]](img/ezgif-4-7deaa41dca.gif)
 
 
 
@@ -116,7 +138,9 @@ http://127.0.0.1:8000/unauthorized_access/?username=Linda%20Rios&operation=edit&
 
 ![image-20220615113317080](img/image-20220615113317080.png)
 
+演示GIF：
 
+![[video-to-gif output image]](img/ezgif-4-c46452d12e.gif)
 
 ### 删除管理员（GET）
 
@@ -129,6 +153,12 @@ http://127.0.0.1:8000/unauthorized_access/?username=Cassandra%20Wright&operation
 ![image-20220615113432287](img/image-20220615113432287.png)
 
 ![image-20220615113449007](img/image-20220615113449007.png)
+
+演示GIF：
+
+![[video-to-gif output image]](img/ezgif-4-221d98cb88.gif)
+
+
 
 ### 提升管理员（GET）
 
@@ -155,3 +185,7 @@ http://127.0.0.1:8000/unauthorized_access/?username=Michael%20James&role=%E7%AE%
 ```
 
 ![image-20220615114517520](img/image-20220615114517520.png)
+
+演示GIF：
+
+![[video-to-gif output image]](https://im4.ezgif.com/tmp/ezgif-4-cc7a05fbc1.gif)
